@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="kig_part" version="7">
+<kpartgui name="kig_part" version="8">
   <MenuBar>
     <Menu name="file">
       <text>&amp;File</text>
@@ -38,6 +38,8 @@
 	<Action name="objects_new_lineperpend" />
 	<Action name="objects_new_lineparallel" />
 	<Action name="objects_new_ray" />
+	<Action name="objects_new_linebyvector" />
+	<Action name="objects_new_halflinebyvector" />
 	<ActionList name="user_line_types" />
       </Menu>
       <Menu name="new_vector">
@@ -168,6 +170,8 @@
     <Action name="objects_new_ray" />
     <Action name="objects_new_lineperpend" />
     <Action name="objects_new_lineparallel" />
+    <Action name="objects_new_linebyvector" />
+    <Action name="objects_new_halflinebyvector" />
     <ActionList name="user_line_types" />
     <ActionList name="user_segment_types" />
   </ToolBar>
